--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "stats.js": "^0.17.0",
     "three": "^0.127.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
@@ -42,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "@types/stats.js": "^0.17.0",
     "@types/three": "^0.127.0"
   }
 }
